BREAKING CHANGES: migrate from javax to jakarta, use newer version of hibernate, modernize definitions of schema tables, use modern com.hibernate.query.Query object